fix: text sizes and gaps

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,7 @@ body {
     color: #fff;
     width: 100%;
     scroll-behavior: smooth;
+    text-wrap: balance;
 }
 
 /* --NAVBAR-- */
@@ -147,6 +148,15 @@ header:has(.hamburger-icon input[type="checkbox"]:checked) .pages {
     }
 }
 
+.phrase-ctnr.horizontal{
+    display: flex;
+    gap: 1rem;
+    width: 100%;
+    justify-content: start;
+    align-items: center;
+    flex-direction: row;
+}
+
 .header-wrap {
     width: 100%;
     display: flex;
@@ -220,6 +230,7 @@ main {
     color: var(--text-color);
 }
 .section {
+    position: relative;
     display: flex;
     background-color: var(--bg-color);
     flex-direction: column;
@@ -240,10 +251,14 @@ main {
     background-position: center;
     background-repeat: no-repeat;
 }
-
+.section-title{
+    font-size: 3rem;
+    color: var(--text-color);
+}
 
 .horizontal {
     gap: 2.5rem;
+    align-items: center;
 }
 
 .img-block.horizontal{
@@ -261,6 +276,8 @@ main {
     justify-content: center;
 }
 .img_container{
+    max-width: 300px;
+    aspect-ratio: 1/1;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -272,12 +289,12 @@ main {
     }
 
     img:nth-child(1){
-        width: 100%;
+        /* width: 100%; */
         height: auto;
         object-fit: cover;
         object-position: center;
         min-width: 0;
-        border: solid var(--text-color) 1px;
+        /* border: solid var(--text-color) 1px; */
     }
 }
 .image-left{
@@ -285,6 +302,11 @@ main {
     width: 100%;
     max-width: 48px;
     border: solid var(--text-color) 1px;
+}
+.phrase-ctnr{
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
 }
 .image-bottom{
     width: auto;
@@ -311,12 +333,24 @@ main {
 .display_text {
     font-size: 3rem;
 }
+.achievement{
+    border: solid 1px var(--accent-color);
+    border-radius: 8px;
+    padding: 1.5rem;
 
+    & .paragraph-2{
+        font-size: 1rem;
+    }
+
+    & .number_counter{
+        font-size: 2.5rem;
+    }
+}
 
 .content-header {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 2rem;
 }
 
 .text-changer {
@@ -401,9 +435,14 @@ main {
 }
 
 .content-description{
+    width: 100%;
     color: var(--accent-color);
     font-size: clamp(1rem, 3vw, 1.5rem);
     line-height: 1.2em;
+}
+
+.content-description p{
+    font-size: clamp(1rem, 3vw, 1.25rem);
 }
 
 .card-wrapper {
@@ -572,8 +611,9 @@ opacity: 0.7;
 
 .button {
     text-align: center;
-    padding: 1.5rem;
+    padding: 1.25rem 4rem;
     border: 1.5px solid var(--text-color);
+    border-radius: 50px;
     color: var(--text-color);
     text-decoration: none;
     transition: all .2s ease-in-out;
@@ -611,12 +651,16 @@ opacity: 0.7;
     display: flex;
     flex-direction: column;
     max-width: 1600px;
-    width: 100%;
+    /* width: 100%; */
+    align-items: center;
     gap: 1.5rem;
 }
 
 .image-gallery.proyectos {
+    object-fit: cover;
+    width: 100%;
     gap: 3.5rem;
+    object-position: center;
 }
 
 video {
@@ -662,6 +706,7 @@ video {
     max-height: 20rem;
     
     & img {
+        width: 100%;
         object-fit: cover;
         height: 100%;
     }
@@ -903,16 +948,25 @@ footer {
         flex-direction: row;
     }
     .img_container{
-        max-width: 300px;
-        img:nth-child(1){
+        top: 5rem;
+        position: sticky;
+        max-width: 450px;
+        /* img:nth-child(1){
+            aspect-ratio: 1/1;
             width: 100%;
             height: 100%;
-        }
+        } */
+    }
+    .text-changer{
+        font-size: clamp(3.5rem, 5vw, 5rem);
     }
     .img-block.horizontal{
+        max-width: 300px;
+        aspect-ratio: 1/1;
         max-height: none;
     }
     .horizontal{
+        align-items: start;
         flex-direction: row;
     }
 
@@ -951,6 +1005,9 @@ footer {
     .img {
         height: 250px;
     }
+    .button{
+        padding: 1.5rem 8rem;
+    }
 
 }
 
@@ -984,6 +1041,7 @@ footer {
     }
     .section {
         padding: 1rem 8rem;
+        gap: 2.5rem;
 
     }
     
@@ -993,10 +1051,6 @@ footer {
 
     .horizontal{
         flex-direction: row;
-    }
-    .text-changer {
-        font-size: 4.7vw;
-        font-size: clamp(3rem, 5vw, 5rem);
     }
 
     .content-subtitle {
@@ -1011,11 +1065,12 @@ footer {
     }
 
     .img_container{
-        max-width: none;
+        aspect-ratio: 1/1;
+        /* max-width: none; */
     }
 
     .image-gallery {
-        gap: 48px;
+        gap: 3rem;
     }
     .image-small-container {
         display: grid;
